recursion.lessons.recursion.koch.Koch.scala.error
Koch:28: error: ';' expected but 'else' found.
	else return;
        ^